# shopping-web

./: .gitignore  README.md  docker-compose.backend.yml  docker-compose.frontend.yml  docker-compose.minio.yml  docker-compose.postgres.yml  docker-compose.yml  import_csv_data.py  packages_online_shopping_entities.puml  答辩演示脚本.md
backend/: alembic.ini  amazon_products.json  amazon_scraper.py  pyproject.toml  requirements-runtime.txt  requirements.txt  seed_products.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/docker/dataset/: ikea_product_categories.csv  muji_product_categories.csv  muji_product_images.csv  muji_products.csv  scrape_muji.py  scraper_mui.py  uniqlo_product_categories.csv
backend/online_shopping/: __init__.py  config.py  database.py  storage.py
backend/online_shopping/api/: __init__.py  app.py  behavior_events.py  deps.py  mappers.py  schemas.py  store.py
backend/online_shopping/models/: __init__.py  account.py  address.py  cart.py  category.py  order.py  payment.py  product.py  product_image.py  product_variant.py  review.py  shipment.py  shop.py  wishlist.py
backend/online_shopping/repositories/: __init__.py  cart_repository.py  catalog_repository.py  marketplace_repository.py  order_repository.py  shop_repository.py
backend/online_shopping/services/: __init__.py  admin_service.py  cart_service.py  catalog_service.py  hash_service.py  manager_service.py  marketplace_service.py  order_service.py  payment_service.py  shipment_service.py
backend/scripts/: seed_historical_orders.py
(+264 files in other folders)
